# modelstudio

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  servo-bridge.mjs  servo-helper.py  vite.config.js
robot-agent-backend/: .env.example  README.md  pyproject.toml
robot-agent-backend/src/robot_agent_backend/: __init__.py  agent.py  config.py  events.py  gpu_service.py  main.py  models.py  service.py  tools.py  vessl_service.py
robot-agent-frontend/: package.json
robot-agent-frontend/app/: globals.css  layout.tsx  page.tsx
src/: App.jsx  main.jsx  styles.css
