[project]
name = "robot-agent-backend"
version = "0.1.0"
description = "FastAPI backend for a robot training pipeline AI agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "openai>=1.0.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.0",
  "uvicorn>=0.30.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
